# android-debloater

./: .gitignore  ADB_SETUP.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  install-buildtools.ps1  install-vs-buildtools.ps1  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_package_database.json  main.rs
src/components/: AppList.tsx  BackupRestore.tsx  CommandPreviewModal.tsx  DeviceInfo.tsx
src/data/: bloatware-database.json
src/store/: appStore.ts
