[package]
name = "xiaomi-debloater"
version = "1.0.0"
description = "Remove bloatware from Xiaomi and Android devices"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

[features]
custom-protocol = ["tauri/custom-protocol"]
